Refactor out namesList and replace with paymentsList